<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_appointments"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_appointments" />
    <item
        android:id="@+id/nav_plans"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_plans" />
    <item
        android:id="@+id/nav_products"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_products" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_profile" />
</menu>
